# pdf-engine

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  statement.typ
batch_data/: record_0.json  record_1.json  record_10.json  record_11.json  record_12.json  record_13.json  record_14.json  record_15.json  record_16.json  record_17.json  record_18.json  record_19.json  record_2.json  record_20.json  record_21.json  record_22.json  record_23.json  record_24.json  record_25.json  record_26.json  record_27.json  record_28.json  record_29.json  record_3.json  record_30.json  record_31.json  record_32.json  record_33.json  record_34.json  record_35.json  record_36.json  record_37.json  record_38.json  record_39.json  record_4.json  record_40.json  record_41.json  record_42.json  record_43.json  record_44.json  (+60 more)
src/: auth.rs  config.rs  error.rs  handlers.rs  helpers.rs  main.rs  models.rs  pdf.rs  routes.rs  state.rs  storage.rs  utils.rs
src/handlers/: user.rs
src/models/: user.rs
src/services/: user.rs
tests/: integration_tests.rs
