[package]
name = "pdf-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.44"
dashmap = "6.1.0"
futures-util = "0.3.32"
handlebars = "6.4.0"
md5 = "0.8.0"
once_cell = "1.21.3"
opendal = { version = "0.55.0", features = ["layers-tracing", "services-s3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7.18", features = ["compat"] }
tokio = { version = "1.50.0", features = ["full"] }
dotenvy = "0.15.7"
