[package]
name = "pdf-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
chrono = "0.4.44"
dashmap = "6.1.0"
futures-util = "0.3.32"
handlebars = "6.4.0"
md5 = "0.8.0"
once_cell = "1.21.3"
opendal = { version = "0.55.0", features = [
    "layers-tracing",
    "services-s3",
    "blocking",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7.18", features = ["compat"] }
tokio = { version = "1.50.0", features = ["full"] }
dotenvy = "0.15.7"
minijinja = { version = "2.0", features = ["loader"] }
thiserror = "2.0.18"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
uuid = "1.21.0"
moka = { version = "0.12", features = ["future"] }
lopdf = "0.39.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }

[profile.release]
opt-level = 3
lto = true
codegen_units = 1
panic = 'abort'
strip = true
